# rag-at-scale

./: .env.example  .gitignore  .vela.yml  Dockerfile  LICENSE  Makefile  README.md  app.py  celery_config.py  client.py  config.py  docker-compose.hatchet.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  hatchet_instance.py  locustfile.py  pyproject.toml  supervisord.conf  tasks.py  tasks_hatchet.py  worker.py  worker_main.py
src/Chunkers/: CharacterChunker.py  Chunker.py  ChunkerEnum.py  CustomChunker.py  RecursiveChunker.py
src/Chunkers/SemanticHelpers/: file_prep.py  semantic_chunking.py  semantic_metadata.py  semantic_retrieval.py
src/DataConnectors/: DataConnector.py  DataConnectorEnum.py  S3_Connector.py
src/EmbedConnectors/: EmbedConnector.py  EmbedConnectorEnum.py  HamEmbedModel.py  OpenAIEmbedModel.py  ThinkTankEmbedModel.py  commons.py
src/Loaders/: AutoLoader.py  CSVLoader.py  HTMLLoader.py  JSONLoader.py  Loader.py  LoaderEnum.py  MarkdownLoader.py  PDFLoader.py
src/ModelFactories/: ChunkerFactory.py  DataConnectorFactory.py  EmbedConnectorFactory.py  LoaderFactory.py  SinkConnectorFactory.py
src/Pipelines/: pipeline.py
src/Shared/: CloudFile.py  LocalFile.py  RagDocument.py  RagSearch.py  RagSinkInfo.py  RagVector.py  Selector.py  embed_config_schema.py  pipeline_config_schema.py  sink_config_schema.py  source_config_schema.py
src/Shared/Exceptions/: __init__.py
src/SinkConnectors/: ElasticsearchSink.py  SinkConnector.py  SinkConnectorEnum.py  filter_utils.py
src/embeddings/: embed_model.py  embedding_service.py  ham_embed_model.py  sentence_transformers.py
src/pipeline/: pipeline.py
src/schemas/: cloud_file_schema.py  document_schema.py  embed_config_schema.py  pipeline_config_schema.py  sink_config_schema.py  source_config_schema.py  vector_schema.py
src/sinks/: elasticsearch_sink.py  milvus_sink.py  vector_db_sink.py
src/sources/: SourceConnector.py  document_conversion.py  s3_source.py  source_connector.py
tests/: README.md  conftest.py
tests/integration/: test_chunker_with_sink.py  test_load_chunker_with_embed.py
tests/mocks/: __init__.py  character_chunker.py  chunker.py  csv_loader.py  elasticsearch_sink.py  exceptions.py  loader.py  local_file.py  openai_embed_model.py  pdf_loader.py  rag_document.py  recursive_chunker.py  s3_connector.py  sink_connector.py
tests/unit/: test_character_chunker.py  test_csv_loader.py  test_elasticsearch_sink.py  test_openai_embed_model.py  test_pdf_loader.py  test_rag_document.py  test_recursive_chunker.py  test_s3_connector.py
utils/kafka/: helpers.py
utils/oauth/: oauth_service.py
utils/platform_commons/: general.py  logger.py  metrics.py
